tests/rosetta/out/Go/15-puzzle-game.error
parse: error[P999]: tests/rosetta/x/Mochi/15-puzzle-game.mochi:108:18: unexpected token "!" (expected PostfixExpr)
  --> tests/rosetta/x/Mochi/15-puzzle-game.mochi:108:18

108 |   while !quit && !isSolved() {
    |                  ^

help:
  Parse error occurred. Check syntax near this location.